# 3d-chess

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pytest.ini  spec.md  todo.md
.cursor/rules/: git-status-before-staging.mdc  nvm-use.mdc  update-todo-when-step-completed.mdc  venv-activation.mdc
.github/workflows/: ci.yml
client/: .eslintrc.json  .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vitest.config.ts
client/e2e/: createGame.spec.ts  homepage.spec.ts
client/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
client/src/engine/: board.test.ts  board.ts  coords.test.ts  coords.ts  index.ts  pieces.test.ts  pieces.ts
client/src/hooks/: useGameSocket.test.ts  useGameSocket.ts  useWindowSize.ts
client/src/screens/: EndGameModal.tsx  GameScreen.tsx  StartScreen.tsx
client/src/three/: Board.test.tsx  Board.tsx  PieceMesh.test.tsx  PieceMesh.tsx  TurnIndicator.tsx
client/src/three/__snapshots__/: PieceMesh.test.tsx.snap
client/src/types/: messages.ts
server/: __init__.py  messages.py  modal_app.py  pyproject.toml  schema.json
server/tests/: conftest.py  test_full_flow.py  test_health.py  test_models.py  test_ws_create.py  test_ws_move.py
